# wiiuse

./: .travis.yml  CHANGELOG  CHANGELOG.mkd  CMakeLists.txt  Doxyfile  README  README.mkd  wiiuse.pc.in
.github/workflows/: CI.yml  linux.yml
cmake/: DoxygenTargets.cmake  FindWinHID.cmake  FindWindowsSDK.cmake  GetCompilerInfoString.cmake  MinGWSearchPathExtras.cmake
cmake-2.8.3-modules/: autoinclude.cmake
example/: CMakeLists.txt  example.c
example-sdl/: CMakeLists.txt  sdl.c
scripts/ci/common/: script.sh
scripts/ci/linux/: install.sh
scripts/ci/osx/: install.sh
scripts/dependencies/: install_dependencies.sh
src/: CMakeLists.txt  classic.c  classic.cpp  classic.h  definitions.h  definitions_os.h  dynamics.c  dynamics.h  events.c  events.cpp  events.h  guitar_hero_3.c  guitar_hero_3.cpp  guitar_hero_3.h  io.c  io.cpp  io.h  io_mac.c  io_mac.h  io_mac.m  io_nix.c  io_nix.cpp  io_platform.h  io_win.c  io_win.cpp  ir.c  ir.cpp  ir.h  motion_plus.c  motion_plus.h  nunchuk.c  nunchuk.cpp  nunchuk.h  os.h  os_bt_embedded.c  os_mac.m  os_nix.c  os_win.c  speaker.c  speaker.h  (+10 more)
src/os_mac/: os_mac.h  os_mac.m  os_mac_find.m  os_mac_interface.m
tests/: test_invariant_wiiuse.c
